--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,2 +1,40 @@
-<h2>contact</h2>
-<p>Welcome to my page!</p>
+<h2>Contact me</h2>
+<form
+  action="/contact/send-message"
+  method="POST"
+  enctype="multipart/form-data"
+>
+  {{#if isError}}
+    <div class="isError">
+      You can't leave fields empty!
+    </div>
+  {{/if}}
+  {{#if isSent}}
+    <div class="isSent">
+      The message has been sent !
+      <br />
+      File '{{fileName}}' has been saved!
+    </div>
+  {{/if}}
+  <label>
+    Your name:
+    <input type="text" name="author" />
+  </label>
+  <label>
+    Your email:
+    <input type="email" name="sender" />
+  </label>
+  <label>
+    Title:
+    <input type="text" name="title" />
+  </label>
+  <label>
+    Project design:
+    <input type="file" name="file" accept=".png, .jpg, .jpeg, .gif" />
+  </label>
+  <label>
+    Message:
+    <textarea name="message"></textarea>
+  </label>
+  <button type="submit">Send message</button>
+</form>
